syntax="proto3";

package auth;
option go_package ="mygin-restful/proto/auth";

message LoginRequest{
    string username=1;
    string password=2;
}

message LoginResponse{
    string token=1;
    bool success=2;
    string message=3;
}

message ValidateTokenRequest{
    string token=1;
}

message ValidateTokenResponse{
    bool valid=1;
    uint64 user_id=2;
    string username=3;
    string error=4;
}

message CheckPermissionRequest{
    string token=1;
    string permission=2;
}

message CheckPermissionResponse{
    bool granted=1;
    string error=2;
}

service AuthService{
    rpc Login(LoginRequest) returns (LoginResponse) {}
    rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse) {}
    rpc CheckPermission(CheckPermissionRequest) returns (CheckPermissionResponse) {}
}