syntax = "proto3";

package registry;
option go_package = "mygin-restful/proto/registry"; // 根据你的 go.mod module 路径调整

message ServiceInfo {
    string name = 1;
    string address = 2; // e.g., "localhost:50052"
}

message RegisterRequest {
    ServiceInfo service = 1;
}

message RegisterResponse {
    bool success = 1;
    string message = 2;
}

message DiscoverRequest {
    string name = 1;
}

message DiscoverResponse {
    string address = 1;
    bool found = 2;
    string error = 3;
}

service RegistryService {
    rpc Register(RegisterRequest) returns (RegisterResponse) {}
    rpc Discover(DiscoverRequest) returns (DiscoverResponse) {}
}